--- a/templates/login.html
+++ b/templates/login.html
@@ -29,25 +29,21 @@
 <body class="text-center">
 
     <main class="form-signin">
-        <form>
+        <form action="/loginsuccess" method="POST">
             <img class="mb-4" src="brand/bootstrap-logo.svg" alt="" width="72" height="57">
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
             <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <input type="email" class="form-control" id="floatingInput" name="email" placeholder="name@example.com">
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <input type="password" class="form-control" id="floatingPassword" name = "password" placeholder="Password">
                 <label for="floatingPassword">Password</label>
             </div>
 
-            <div class="checkbox mb-3">
-                <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                </label>
-            </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <input class="w-100 btn btn-lg btn-primary" type="submit" value="Login">
+            <p class="mt-5 mb-3">{{ data }}</p>
             <p class="mt-5 mb-3"><a href="/">Back to Home</a></p>
             <p class="mt-5 mb-3 text-muted">&copy; 2021</p>
         </form>
